Kubernetes/my-deployment-fraud.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-fraud-deployment
  labels:
    app: my-fraud-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-fraud-api
  template:
    metadata: 
      labels: 
        app: my-fraud-api
    spec:
      containers:
      - name: container-fastapi
        image: Fraud-api/fraud-api:latest
        ports:
        - containerPort: 8000
