Kubernetes/my-service-fraud.yml
apiVersion: v1
kind: Service
metadata:
  name: my-fraud-service
  labels:
    app: my-fraud-api
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-fraud-api
